2008-01-01  Stefan Petersen  <spe>

	Aperture macro debugging spree:
	* src/draw_amacro.c: X and Y of aperture macro primitive 1 is
	  apperently offset from real x and y.
	* draw_amacro.[hc], draw.c: Make a local copy of parameters when
	  drawing aperture macros. New parameter to function is number of 
	  parameters.
	* gerb_image.h, gerber.c: Increase parameter storage and check
	  that it is enough when parsing. (In HEAD).
	* amacro.c handles comments and calculation macros. (In HEAD).

-- 1.0.3 ---
	
2007-11-23 16:56  Dan McMahill <danmc at users dot sourceforge dot net>

	* src/: gerber.c, gerbv.c: get zoom->fit and the initial autoscaled
	  size to work when the gerber file has the SR step and repeat code
	  in it.

2007-11-22 23:57  Dan McMahill <danmc at users dot sourceforge dot net>

	* configure.in, src/Makefile.am: clean up the build system a good
	  bit.	In particular:

	  - don't hard code pkg-config.  Find it with AC_PATH_PROG
	  instead.

	  - Move the addition of -Wall from hardcoded in the Makefile.am
	  to a test based on gcc in configure.in so we can build with
	  non-gcc compilers.

	  - PKG_CHECK_MODULES already sets FOO_FLAGS and FOO_LIBS so no
	  need to run pkg-config ourselves and explicitly set these.

	  - remove a bunch of AC_SUBST() lines which substituted variables
	   which are already substituted.  For example AC_PROG_CC already
	  will substitute CC, no need to AC_SUBST(CC).

	  - Remove duplication in how gtk and png libs and includes were
	  added   to the compiler lines.

2007-11-22 23:52  Dan McMahill <danmc at users dot sourceforge dot net>

	* src/dynload.c: avoid a compiler warning about inconsistent types

2007-11-22 07:22  Stuart Brorson <brorson at users dot sourceforge dot net>

	* Makefile.am, scheme/Makefile.am, src/Makefile.am: Cleaning up
	  Makefile.am in several directories in prep for release.

2007-11-18 11:09  Stuart Brorson <brorson at users dot sourceforge dot net>

	* ChangeLog: Brought ChangeLog up to date.