@@ -145,6 +145,8 @@ gerbv_draw_prim1(GdkPixmap *pixmap, GdkGC *gc, macro_stack_t *s,
 {
     const int exposure_idx = 0;
     const int diameter_idx = 1;
+    const int x_offset_idx = 2;
+    const int y_offset_idx = 3;
     const gint full_circle = 23360;
     GdkGC *local_gc = gdk_gc_new(pixmap);
     gint dia    = round(fabs(s->stack[diameter_idx] * (double)scale));
@@ -154,8 +156,8 @@ gerbv_draw_prim1(GdkPixmap *pixmap, GdkGC *gc, macro_stack_t *s,
 
     gdk_gc_copy(local_gc, gc);
 
-    real_x += (int)(s->stack[2] * (double)scale);
-    real_y += (int)(s->stack[3] * (double)scale);
+    real_x += (int)(s->stack[x_offset_idx] * (double)scale);
+    real_y -= (int)(s->stack[y_offset_idx] * (double)scale);
 
     /* Exposure */
     if (s->stack[exposure_idx] == 0.0) {
@@ -635,6 +637,7 @@ gerbv_draw_amacro(GdkPixmap *pixmap, GdkGC *gc,
     instruction_t *ip;
     int handled = 1;
     double *lp; /* Local copy of parameters */
+    double tmp[2] = {0.0, 0.0};
 
     lp = (double *)malloc(sizeof(double) * nuf_parameters);
     if (lp == NULL)
@@ -658,13 +661,17 @@ gerbv_draw_amacro(GdkPixmap *pixmap, GdkGC *gc,
 	    push(s, pop(s) + pop(s));
 	    break;
 	case SUB :
-	    push(s, -pop(s) + pop(s));
+	    tmp[0] = pop(s);
+	    tmp[1] = pop(s);
+	    push(s, tmp[1] - tmp[0]);
 	    break;
 	case MUL :
 	    push(s, pop(s) * pop(s));
 	    break;
 	case DIV :
-	    push(s, 1 / ((pop(s) / pop(s))));
+	    tmp[0] = pop(s);
+	    tmp[1] = pop(s);
+	    push(s, tmp[1] / tmp[0]);
 	    break;
 	case PRIM :
 	    /* 
